# capn-blinky

./: .gitignore  CMakeLists.txt  README.md  build.sh  capn-blinky.cpp  convert_points.cpp
STM32CubeIDE/: .cproject  .mxproject  .project  STM32L011F3UX_FLASH.ld  capn-blinky.ioc
STM32CubeIDE/Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
STM32CubeIDE/Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
STM32CubeIDE/Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal_rcc.c
cmake/: arm-gcc-toolchain.cmake
hardware/: capn-blinky.bom.html
hardware/cad/: TOS_Badge - TOS_Badge-2.STL  TOS_Badge - TOS_LightGuide-3.STL  TOS_Badge - TOS_LightGuide_Side-1.STL  TOS_Badge.SLDASM  TOS_Badge.SLDPRT  TOS_Badge.pwj5  TOS_Badge_LaserCut.DXF  TOS_Badge_PCB_Outline.DXF  TOS_LightGuide.SLDPRT  TOS_LightGuide_Side.SLDPRT
openocd/: stlink.cfg
